ELI-30: one-time binding still not good enough it would seem (at least for native use against production); reverting to using collection-repeat and removing the preference option from the UI

--- a/backend/webapp/src/main/webapp/frontend/templates/contactable-list.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/contactable-list.html
@@ -15,35 +15,13 @@
 
     </ion-nav-bar>
 
-    <ion-content scroll="true" overflow-scroll="true" ng-switch on="ctrl.preferences.scrolling.selected">
+    <ion-content scroll="true" overflow-scroll="true">
 
-        <ion-list  ng-switch-when="ng-repeat"
-                   ng-repeat="contactable in ctrl.contactables">
-            <div class="item item-divider"
-                 ng-if="ctrl.firstLetter(contactable.name) !== ctrl.firstLetter(ctrl.contactables[$index-1].name)">
-                {{::ctrl.firstLetter(contactable.name)}}
-            </div>
-            <ion-item
-                    class="item-avatar item-icon-left item-remove-animate"
-                    type="item-text-wrap"
-                    href="#/tab/contactables/{{contactable.$$instanceId}}" >
-                <h3 class="{{::ctrl.cachedStateCssClass(contactable)}}">
-                    <span>{{::contactable.name}}</span>
-                </h3>
-                <div ng-if="contactable.type == 'Contact'">
-                    <p>{{::contactable.company}}</p>
-                    <i class="icon ion-android-contact"></i>
-                </div>
-                <div ng-if="contactable.type == 'Contact Group'">
-                    <p>{{::contactable.country}}</p>
-                    <i class="icon ion-android-contacts"></i>
-                </div>
-            </ion-item>
-        </ion-list>
-
-        <ion-list ng-switch-when="collection-repeat">
-            <!-- combining the ion-list with the div seems to fail,
-                 "collection-repeat is unable to calculate item-height" -->
+        <ion-list>
+            <!--
+            doesn't seem possible to put collection-repeat directive with ion-list; get error:
+            "collection-repeat tried to compute the height ... but was unable to. Please provide the "item-height" attribute
+            -->
             <div collection-repeat="contactable in ctrl.contactables">
                 <ion-item
                         class="item-avatar item-icon-left item-remove-animate"
