Adding an app version to the about page.

--- a/backend/webapp/src/main/webapp/frontend/templates/about.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/about.html
@@ -9,6 +9,14 @@
 
         <div class="list card">
             <div class="item item-divider">
+                App version
+            </div>
+            <div class="item">
+                v0.1.20160123
+            </div>
+        </div>
+        <div class="list card">
+            <div class="item item-divider">
                 Platform
             </div>
             <div class="item">
