ELI-39: always return from the cache, and then asynchronously load data afterwards.
Make message re: loaded data more inconspicuous (because this is now the default).

--- a/backend/webapp/src/main/webapp/frontend/templates/contactable-detail.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/contactable-detail.html
@@ -101,11 +101,8 @@
             </div>
 
         </div>
+        <p ng-show="ctrl.message">{{ ctrl.message }}</p>
 
     </ion-content>
-
-    <ion-footer-bar class="bar-clear bar-assertive" ng-show="ctrl.message">
-        <p class="title">{{ ctrl.message }}</p>
-    </ion-footer-bar>
 
 </ion-view>
