--- a/frontend/www/templates/contactable-detail.html
+++ b/frontend/www/templates/contactable-detail.html
@@ -101,11 +101,8 @@
             </div>
 
         </div>
+        <p ng-show="ctrl.message">{{ ctrl.message }}</p>
 
     </ion-content>
-
-    <ion-footer-bar class="bar-clear bar-assertive" ng-show="ctrl.message">
-        <p class="title">{{ ctrl.message }}</p>
-    </ion-footer-bar>
 
 </ion-view>
