--- a/frontend/www/templates/contactable-list.html
+++ b/frontend/www/templates/contactable-list.html
@@ -1,9 +1,12 @@
-<ion-view view-title="Contacts">
+<ion-view view-title="ECP Contacts">
 
     <ion-nav-bar class="bar-stable">
 
         <ion-nav-buttons side="left">
-            <button class="button button-icon icon ion-navicon-round" ng-click="ctrl.showLeftSideMenu()">
+            <button class="button button-icon icon ion-navicon-round"
+                    ng-click="ctrl.showLeftSideMenu()"
+                    ng-show="ctrl.isShowLeftSideMenu()"
+            >
             </button>
         </ion-nav-buttons>
 
