--- a/frontend/www/templates/about.html
+++ b/frontend/www/templates/about.html
@@ -5,14 +5,19 @@
         </ion-nav-back-button>
     </ion-nav-bar>
 
-    <ion-content class="padding">
+    <ion-content class="padding" scroll="true" overflow-scroll="true">
 
         <div class="list card">
             <div class="item item-divider">
                 App version
             </div>
             <div class="item">
-                v0.1.20160125
+                v0.1.20160126 (sidemenus)
+            </div>
+            <div class="item">
+                <p>Previous:</p>
+                <p> - v0.1.20160125 (more responsive, options tab)</p>
+                <p>- v0.1.xxx (initial version)</p>
             </div>
         </div>
         <div class="list card">
