ELI-54: move sidemenu to left hand side.

--- a/backend/webapp/src/main/webapp/frontend/templates/contactable-list.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/contactable-list.html
@@ -2,10 +2,10 @@
 
     <ion-nav-bar class="bar-stable">
 
-        <ion-nav-buttons side="left">
-            <button class="button button-icon icon ion-navicon-round"
-                    ng-click="ctrl.showLeftSideMenu()"
-                    ng-show="ctrl.isShowLeftSideMenu()"
+        <ion-nav-buttons side="right">
+            <button class="button button-icon icon ion-android-more-vertical"
+                    ng-click="ctrl.showSideMenu()"
+                    ng-show="ctrl.isShowSideMenu()"
             >
             </button>
         </ion-nav-buttons>
