--- a/backend/webapp/src/main/webapp/frontend/templates/tabs.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/tabs.html
@@ -1,6 +1,6 @@
 <ion-side-menus>
 
-    <ion-side-menu side="left">
+    <ion-side-menu side="right">
 
         <ion-content scroll="false" overflow-scroll="false">
         <!--<ion-content scroll="true" overflow-scroll="true">-->
