ELI-54: show side menu on the detail page also.
Also, move the check as to whether offline is enabled down into the side menu, because we now have the logout button there also.

--- a/backend/webapp/src/main/webapp/frontend/templates/contactable-list.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/contactable-list.html
@@ -3,17 +3,16 @@
     <ion-nav-bar class="bar-stable">
 
         <ion-nav-buttons side="right">
-            <button class="button button-icon icon ion-android-more-vertical"
-                    ng-click="ctrl.showSideMenu()"
-                    ng-show="ctrl.isShowSideMenu()"
-            >
-            </button>
-        </ion-nav-buttons>
-
-        <ion-nav-buttons side="right">
             <button class="button button-icon icon ion-ios-search-strong" ng-click="ctrl.showFilterBar()">
             </button>
         </ion-nav-buttons>
+
+        <ion-nav-buttons side="secondary">
+            <button class="button button-icon icon ion-android-more-vertical"
+                    ng-click="ctrl.showSideMenu()">
+            </button>
+        </ion-nav-buttons>
+
 
     </ion-nav-bar>
 
