--- a/backend/webapp/src/main/webapp/frontend/templates/tabs.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/tabs.html
@@ -5,7 +5,7 @@
         <ion-content scroll="false" overflow-scroll="false">
         <!--<ion-content scroll="true" overflow-scroll="true">-->
 
-            <div class="card">
+            <div class="card" ng-show="ctrl.isOfflineEnabled()">
                 <div class="item item-text-wrap">
                     Download all contacts so accessible even while offline
                 </div>
