--- a/frontend/www/templates/contactable-list.html
+++ b/frontend/www/templates/contactable-list.html
@@ -9,8 +9,7 @@
 
         <ion-nav-buttons side="secondary">
             <button class="button button-icon icon ion-android-more-vertical"
-                    ng-click="ctrl.showSideMenu()"
-                    ng-show="ctrl.isShowSideMenu()">
+                    ng-click="ctrl.showSideMenu()">
             </button>
         </ion-nav-buttons>
 
