--- a/backend/webapp/src/main/webapp/frontend/templates/contactable-detail.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/contactable-detail.html
@@ -3,6 +3,13 @@
     <ion-nav-bar class="bar-stable">
         <ion-nav-back-button>
         </ion-nav-back-button>
+
+        <ion-nav-buttons side="secondary">
+            <button class="button button-icon icon ion-android-more-vertical"
+                    ng-click="ctrl.showSideMenu()">
+            </button>
+        </ion-nav-buttons>
+
     </ion-nav-bar>
 
     <ion-content class="padding" scroll="true" overflow-scroll="true">
