--- a/backend/webapp/src/main/webapp/frontend/templates/contactable-detail.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/contactable-detail.html
@@ -4,6 +4,11 @@
         <ion-nav-back-button>
         </ion-nav-back-button>
 
+        <ion-nav-buttons side="right">
+            <a class="button button-icon icon ion-home" href="#/tab/contactables"></a>
+        </ion-nav-buttons>
+
+
         <ion-nav-buttons side="secondary">
             <button class="button button-icon icon ion-android-more-vertical"
                     ng-click="ctrl.showSideMenu()">
