--- a/backend/webapp/src/main/webapp/frontend/templates/login.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/login.html
@@ -24,10 +24,9 @@
         </div>
         <button class="button button-block button-calm" ng-click="login()">Login</button>
 
-
     </ion-content>
 
-    <div class="bar bar-footer bar-dark">
+    <div class="bar bar-footer bar-dark" ng-if="showEnvironment()">
         <div class="button-bar">
             <select class="button"
                     ng-model="environment"
@@ -35,7 +34,6 @@
             >
                 <option ng-repeat="env in preferences.environment.options">{{::env.name}}</option>
             </select>
-            <button class="button button-primary" ng-click="about()">About</button>
         </div>
     </div>
 
