--- a/backend/webapp/src/main/webapp/frontend/templates/login.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/login.html
@@ -6,33 +6,33 @@
 
 
     <ion-content class="padding">
-        <div class="card" ng-show="error">
+        <div class="card" ng-show="ctrl.error">
 
             <div class="item item-text-wrap assertive">
                 <i class="icon ion-android-warning"></i>
-                {{error}}
+                {{ctrl.error}}
             </div>
         </div>
 
         <div class="list list-inset">
             <label class="item item-input">
-                <input type="text" placeholder="Username" ng-model="credentials.username" >
+                <input type="text" placeholder="Username" ng-model="ctrl.credentials.username" >
             </label>
             <label class="item item-input">
-                <input type="password" placeholder="Password" ng-model="credentials.password">
+                <input type="password" placeholder="Password" ng-model="ctrl.credentials.password">
             </label>
         </div>
-        <button class="button button-block button-calm" ng-click="login()">Login</button>
+        <button class="button button-block button-calm" ng-click="ctrl.login()">Login</button>
 
     </ion-content>
 
-    <div class="bar bar-footer bar-dark" ng-if="showEnvironment()">
+    <div class="bar bar-footer bar-dark" ng-if="ctrl.showEnvironment()">
         <div class="button-bar">
             <select class="button"
-                    ng-model="environment"
-                    ng-change="updateEnvironment()"
+                    ng-model="ctrl.environment"
+                    ng-change="ctrl.updateEnvironment()"
             >
-                <option ng-repeat="env in preferences.environment.options">{{::env.name}}</option>
+                <option ng-repeat="env in ctrl.preferences.environment.options">{{::env.name}}</option>
             </select>
         </div>
     </div>
