ELI-61: completed the implementation of being able to fix the order of ContactGroups.
- in ContactGroupOrderingViewModel
  - change the title of the ContactGroup
  - added in name as derived property
  - suppressing the contact group itself in table; Also...
  - switching to hand-coded ViewModel (rather than @XmlRootElement).

- ContactGroup and Contact now independently implement Comparable
  - ContactGroup based on displayOrder, name
  - Contact based on just name
- ContactGroupRepository#listAll() always returns a sorted list
- in ContactableViewModel
  - adding in displayOrder
  - also, removed getFirstName() and getLastName() since no longer needed

- on frontend:
  - updated backend.js to sort using same scheme (though strictly speaking probably does not need to anymore).

Also some small cosmetic changes to the backend:
- ContactGroup no longer bounded, instead Contact#addContactRole has a choices which lists the ContactGroups in sorted order
- suppress ContactRole#contact reference when a parented collection within Contact
- make ContactGroup#contactRoles programmatic, since also have ContactGroup#contacts

Also some small improvements on ELI-62:
- use simulated implementation of $q.allSettled rather than $q.all (should be resilient to any $http calls that fail)
- remove the message once all http requests completed

Also:
- change title of home page to just "Groups", per ELI-60.

--- a/backend/webapp/src/main/webapp/frontend/templates/tabs.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/tabs.html
@@ -7,7 +7,9 @@
             <div class="card"  ng-show="ctrl.isOfflineEnabled()">
                 <div class="item item-text-wrap" ng-show="ctrl.isOfflineEnabled()">
                     <button class="button button-balanced button-block"
-                            ng-click="ctrl.downloadContacts()">
+                            ng-click="ctrl.downloadContacts()"
+                            ng-disabled="ctrl.message"
+                    >
                         <i class="ion-android-download">&nbsp;Download all contacts</i>
                     </button>
                 </div>
@@ -18,10 +20,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="item" ng-show="isNotProduction()">
+                <div class="item" ng-show="true || isNotProduction()">
                     <button class="button button-assertive button-block"
                             ng-click="ctrl.removeDownloadedContacts()">
-                        <i class="ion-android-download">&nbsp;Remove all</i>
+                        <i class="ion-trash-b">&nbsp;Remove all</i>
                     </button>
                 </div>
             </div>
