--- a/frontend/www/templates/tabs.html
+++ b/frontend/www/templates/tabs.html
@@ -48,7 +48,7 @@
                     About
                 </div>
                 <div class="item item-text-wrap">
-                    <p>- v0.2.20160128 (bulk download)</p>
+                    <p>- v0.3.20160203 (display order, better download, fix blank page)</p>
                     <p>Previous:</p>
                     <p>- v0.2.20160127 (auto login)</p>
                     <p>- v0.1.20160126 (sidemenus)</p>
