ELI-71: different way to prevent swipe back.
Also reset app_id

--- a/backend/webapp/src/main/webapp/frontend/templates/login.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/login.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Login" name="login-view">
+<ion-view view-title="Login" name="login-view" can-swipe-back="false">
 
     <ion-header-bar align-title="center" class="bar-dark">
         <h1 class="title">ECP Contacts</h1>
