--- a/backend/webapp/src/main/webapp/frontend/templates/tabs.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/tabs.html
@@ -48,8 +48,9 @@
                     About
                 </div>
                 <div class="item item-text-wrap">
-                    <p>- v0.3.20160203 (display order, better download, fix blank page)</p>
+                    <p>- v0.4.20160211 (fix blank page)</p>
                     <p>Previous:</p>
+                    <p>- v0.3.20160203 (display order, better download)</p>
                     <p>- v0.2.20160127 (auto login)</p>
                     <p>- v0.1.20160126 (sidemenus)</p>
                     <p>- v0.1.20160125 (more responsive, options tab)</p>
