--- a/backend/webapp/src/main/webapp/frontend/templates/contactable-detail.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/contactable-detail.html
@@ -1,4 +1,4 @@
-<ion-view view-title="{{ctrl.contactable.name}}">
+<ion-view view-title="{{ctrl.contactable.name}}" can-swipe-back="false">
 
     <ion-nav-bar class="bar-stable">
         <ion-nav-back-button>
