--- a/frontend/www/templates/login.html
+++ b/frontend/www/templates/login.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Login" name="login-view">
+<ion-view view-title="Login" name="login-view" can-swipe-back="false">
 
     <ion-header-bar align-title="center" class="bar-dark">
         <h1 class="title">ECP Contacts</h1>
