--- a/backend/webapp/src/main/webapp/frontend/templates/tabs.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/tabs.html
@@ -48,9 +48,8 @@
                     About
                 </div>
                 <div class="item item-text-wrap">
-                    <p>- v0.4.20160211.c (tel/email buttons)</p>
+                    <p>- v0.4.20160211.d (fix blank page, tel/email buttons)</p>
                     <p>Previous:</p>
-                    <p>- v0.4.20160211.b (fix blank page)</p>
                     <p>- v0.3.20160203 (display order, better download)</p>
                     <p>- v0.2.20160127 (auto login)</p>
                     <p>- v0.1.20160126 (sidemenus)</p>
