--- a/backend/webapp/src/main/webapp/frontend/templates/about.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/about.html
@@ -1,4 +1,4 @@
-<ion-view view-title="About" name="about-view">
+<ion-view view-title="About" name="about-view" can-swipe-back="false">
 
     <ion-nav-bar class="bar-stable">
         <ion-nav-back-button>
