--- a/frontend/www/templates/tabs.html
+++ b/frontend/www/templates/tabs.html
@@ -48,7 +48,7 @@
                     About
                 </div>
                 <div class="item item-text-wrap">
-                    <p>- v0.4.20160211.d (fix blank page, tel/email buttons)</p>
+                    <p>- v0.4.20160211.e (fix swipe-left blank page, tel/email buttons)</p>
                     <p>Previous:</p>
                     <p>- v0.3.20160203 (display order, better download)</p>
                     <p>- v0.2.20160127 (auto login)</p>
