ELI-46: 'admin' and 'reader' user; corresponding equivalent roles; lock the default 'isis-module-security-admin' user; don't use app tenancy (all users in the global app tenancy).
Also update the welcome.html

--- a/backend/webapp/src/main/webapp/css/application.css
+++ b/backend/webapp/src/main/webapp/css/application.css
@@ -17,23 +17,12 @@
  *  under the License.
  */
 
-.navbar-brand img {
-    margin-top: -7px;
-    margin-left: 5px;
-}
-
-.x-key label.scalarName {
-    color: red;
-}
-
-tr.todo {
-}
-
-tr.done {
-    text-decoration: line-through;
-    color: #d3d3d3;
-}
-
 .collectionContentsAsAjaxTablePanel span {
     color: black;
+}
+
+
+
+.popover-content > .btn-group > .btn-danger {
+    margin-bottom: 10px;
 }
