ELI-105: Made the addresses multiline

--- a/frontend/www/css/style.css
+++ b/frontend/www/css/style.css
@@ -16,6 +16,10 @@
   vertical-align: middle;
 }
 
+.multiline {
+    white-space: pre-line;
+}
+
 .col-33 div.button,
 .col-33 a.button,
 .col-33 button {
