Testing new page on the backend

--- a/backend/webapp/src/main/webapp/mobile/templates/login.html
+++ b/backend/webapp/src/main/webapp/mobile/templates/login.html
@@ -37,4 +37,10 @@
         </div>
     </div>
 
+
+    <div class="bar bar-footer bar-balanced">
+         <a href="../tos.html">Terms of service</a>
+    </div>
+
+
 </ion-view>
