Makes bar more tranquil and correct the link for the html page

--- a/backend/webapp/src/main/webapp/mobile/templates/login.html
+++ b/backend/webapp/src/main/webapp/mobile/templates/login.html
@@ -38,8 +38,10 @@
     </div>
 
 
-    <div class="bar bar-footer bar-balanced">
-         <a href="../tos.html">Terms of service</a>
+    <div class="bar bar-header bar-stable">
+        <center>
+            <a href="tos.html">Terms of service</a>
+        </center>
     </div>
 
 
