Adding postgres driver to POM and commenting out the footer

--- a/backend/webapp/src/main/webapp/mobile/templates/login.html
+++ b/backend/webapp/src/main/webapp/mobile/templates/login.html
@@ -37,12 +37,12 @@
         </div>
     </div>
 
-
-    <div class="bar bar-footer bar-stable">
-        <center>
-            <a href="tos.html">Terms of service</a>
-        </center>
-    </div>
+<!-- If you'd want the TOS link on the page. -->
+<!--    <div class="bar bar-footer bar-stable">-->
+<!--        <center>-->
+<!--            <a href="tos.html">Terms of service</a>-->
+<!--        </center>-->
+<!--    </div>-->
 
 
 </ion-view>
